Flush view manager's delayed resize when flushing layout.  (Bug 453896)  r+sr=bzbarsky